2011-02-07  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110207
	  Merge with NetBSD make, pick up
	  o fix for bug in meta mode.
	
2011-01-03  Simon J. Gerraty  <sjg@bad.crufty.net>

	* parse.c: SunOS 5.8 at least does not have MAP_FILE

2011-01-01  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110101
	  Merge with NetBSD make, pick up
	  o use mmap(2) if available, for reading makefiles

2010-12-15  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101215
	  Merge with NetBSD make, pick up
	  o ensure meta_job_error() does not report a previous .meta file
	    as being culprit.

2010-12-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101210
	  Merge with NetBSD make, pick up
	  o meta_oodate: track cwd per process, and only consider target
	    out-of-date if missing file is outside make's CWD.
	    Ignore files in /tmp/ etc.
	  o to ensure unit-tests results match, need to control LC_ALL
	    as well as LANG.
	  o fix for parsing bug in var.c

2010-11-26  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101126
	  Merge with NetBSD make, pick up
	  o if stale dependency is an IMPSRC, search via .PATH
	  o meta_oodate: if a referenced file is missing, target is
	    out-of-date.
	  o meta_oodate: if a target uses .OODATE in its commands,
	    it (.OODATE) needs to be recomputed.
	  o keep a pointer to youngest child node, rather than just its
	    mtime.
	
2010-11-02  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101101

2010-10-16  Simon J. Gerraty  <sjg@bad.crufty.net>

	* machine.sh: like os.sh, 
	allow for uname -p producing useless drivel

2010-09-13  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap: document configure knobs for meta and filemon.

	* Makefile.in (MAKE_VERSION): bump version to 20100911